<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">MeetInTheMiddle</string>
	<!-- id for Facebook -->
	<string name="app_id">249637715205351</string>
	<string name="search_label">Search</string>
	<string name="search_hint">Search Contacts</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="edit_message">Enter a message</string>
	<string name="button_contacts">Contacts</string>
	<string name="button_messages">Messages</string>
	<string name="button_meet">Meet</string>
	<string name="button_profile">Profile</string>
	<string name="button_questions">Questions?</string>
	<string name="button_settings">Settings</string>
	<string name="title_activity_display_message">My Message</string>
	<string name="title_activity_display_details">DisplayMeetingDetails</string>
	<string name="title_activity_display_messages">DisplayMessagesActivity</string>
	<string name="title_activity_display_rating">DisplayRatingActivity</string>
	<string name="title_activity_display_request">DisplayRequestActivity</string>	
	<string name="title_activity_display_meetings">DisplayMeetingsActivity</string>
	<string name="title_activity_display_profile">DisplayProfileActivity</string>
	<string name="title_activity_display_questions">DisplayQuestionsActivity</string>
	<string name="title_activity_display_settings">DisplaySettingsActivity</string>
	<string name="user_name">Name</string>
	<string name="user_mail">E-Mail</string>
	<string name="user_information">Benutzerdaten</string>
	<string name="title_activity_registration">RegistrationActivity</string>
	<string name="title_activity_display_login">Sign in</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_register">Register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="action_forgot_password">Recover lost password</string>
	<string name="login_progress_signing_in">Signing in&#8230;</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">Incorrect password or email</string>
	<string name="err_verbindung_fehlgeschlagen">Es konnte keine Verbindung hergestellt werden</string>
	<string name="error_field_required">This field is required</string>
	<!-- Strings related to register -->
	<string name="title_activity_display_register">Sign in</string>

	<!-- Strings related to register -->
	<string name="prompt_firstname_register">First Name</string>
	<string name="prompt_lastname_register">Last Name</string>
	<string name="prompt_email_register">Email</string>
	<string name="prompt_password_register">Password</string>
	<string name="prompt_phone_register">Phone No.</string>
	<string name="prompt_interests_register">Interests</string>
	<string name="string_birthday">Pick your birthday</string>
	<string name="string_register">Register New Account</string>
	<string name="registration_progress_signing_in">Registering account&#8230;</string>
	<string name="registration_progress_spinner">Registering account&#8230;</string>
	<string name="title_activity_display_contacts">DisplayContactsActivity</string>
	<string name="title_activity_display_meeting_functions">DisplayMeetingFunctionsActivity</string>
	<string name="registry_status">Registry Status:</string>
	<string name="registry_status_result"></string>
	<string name="broadcast_label"></string>
	<string name="broadcast_result"></string>
</resources>