<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".DisplayLoginActivity" >

	<!-- Login progress -->

	<LinearLayout
		android:id="@+id/login_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:visibility="gone" >

		<ProgressBar
			style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp" />

		<TextView
			android:id="@+id/login_status_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:fontFamily="sans-serif-light"
			android:text="@string/login_progress_signing_in"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<!-- Login form -->

	<RelativeLayout
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="fill_vertical" >

		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:adjustViewBounds="true"
			android:scaleType="centerCrop"
			android:src="@drawable/balkenoben" />

		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:adjustViewBounds="true"
			android:cropToPadding="true"
			android:paddingBottom="0dp"
			android:paddingRight="0dp"
			android:scaleType="centerCrop"
			android:src="@drawable/balkenunten" />

		<Button
			android:id="@+id/register_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/sign_in_button"
			android:layout_marginRight="15dp"
			android:layout_marginTop="18dp"
			android:background="#29235C"
			android:onClick="attemptRegistration"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:text="@string/action_register"
			android:textColor="@android:color/white"
			android:textSize="20sp"
			android:textStyle="italic" />

		<Button
			android:id="@+id/sign_in_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignRight="@+id/register_button"
			android:layout_below="@+id/password"
			android:layout_marginTop="36dp"
			android:background="#29235C"
			android:gravity="center"
			android:onClick="attemptLogin"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:text="@string/action_sign_in"
			android:textColor="@android:color/white"
			android:textSize="20sp"
			android:textStyle="italic" />

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/imageView1"
			android:layout_marginTop="34dp"
			android:ems="10"
			android:hint="@string/prompt_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			android:singleLine="true" />

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/email"
			android:layout_marginTop="22dp"
			android:ems="10"
			android:hint="@string/prompt_password"
			android:imeActionId="@+id/login"
			android:imeActionLabel="@string/action_sign_in_short"
			android:imeOptions="actionUnspecified"
			android:inputType="textPassword"
			android:maxLines="1"
			android:padding="10dp"
			android:paddingTop="15dp"
			android:singleLine="true" />
	</RelativeLayout>

</merge>